--- a/_config.yml
+++ b/_config.yml
@@ -249,6 +249,7 @@ exclude:
   - _pages/publications.md
   - _pages/repositories.md
   - _pages/teaching.md
+  - _pages/dropdown.md
   - _projects/2_project.md
   - _projects/3_project.md
   - _projects/4_project.md
