--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,92 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+      value: Juan Muñoz Villalón
+    - name: Label
+      value: Telecommunications Engineer and Machine Learning Student
+    - name: Email
+      value: juanmuvii@gmail.com
+    - name: Phone
+      value: +34 616-878-636
+    - name: Location
+      value: Madrid, Spain
+    - name: LinkedIn
+      value: <a href="https://linkedin.com/in/Juan-Munoz-Villalon">Juan-Munoz-Villalon</a>
+    - name: Portfolio
+      value: <a href="https://juanmv7.github.io/">juanmv7.github.io</a>
+    - name: Summary
+      value: Currently pursuing a Master's in Machine Learning for Healthcare. Multidisciplinary with strong skills in artificial intelligence, machine learning, photonics integrated circuits, and telecommunications.
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Double Master
+      institution: Universidad Carlos III de Madrid, Madrid, Spain
+      year: 2023 - 2025
+      description: Telecommunication Technologies Engineering and Machine Learning for Healthcare
+    - title: Degree in Telecommunication Technologies Engineering
+      institution: Universidad de Granada, Granada, Spain
+      year: 2019 - 2023
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+        - Average Grade: 8.817/10
+        - TFG: Utilization analysis in Asynchronous TSN Networks
+        - 18 honors
+    - title: Exchange Program
+      institution: University of British Columbia, Vancouver, Canada
+      year: 2022
+      description: Semiconductor Laser Theory and RF Integrated Circuits (5 months)
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research Assistant
+      institution: University Carlos III of Madrid - EPIQ Chair with Arquimea, Madrid, Spain
+      year: 2023 - 2025
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Installation and characterization of Lithium Niobate Photonic Integrated Circuits (PICs) for functional Near-Infrared Spectroscopy (fNIRS).
+        - Set up probe station for PICs characterization.
+        - Studied frequency shifters as alternatives to acousto-optic modulators using OptSim.
+    - title: Working Student
+      institution: Infineon Technologies AG, Munich, Germany
+      year: 2022
       description:
-        - Description 1.
-        - Description 2.
+        - Developed secure sensor applications and authentication systems for blockchain technology.
+        - Implemented secure sensors in PSoC 64.
+        - Developed a JavaScript server in Docker for authentication verification.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
-
-- title: Academic Interests
+- title: Skills
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Technical Skills
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Machine Learning: Predictive modeling, classification, and clustering for healthcare applications.
+        - Deep Learning: Expertise in Neural Networks for real-world challenges.
+        - Natural Language Processing: Text analysis, sentiment detection, and language modeling.
+        - Image Processing: Advanced techniques for image analysis and enhancement.
+        - Computer Vision: Object detection, recognition, and video processing.
+        - Signal Processing: Filtering and transformation techniques (FFT, Kalman Filters, Particle Filters).
+        - Networking Protocols: TCP/IP, SIP, RTP, VoIP; debugging communication protocols.
+        - Cybersecurity: Secure communication protocols and authentication systems.
+        - Photonic Integrated Circuits: Simulation of Fabry-Perot cavities (Lumerical, Klayouts).
+        - Java Programming: Robust applications and secure server-side solutions.
+        - Programming: MATLAB, Python, C/C++, Java, SQL, JavaScript, Git, Bash.
+    - title: Soft Skills
       items:
-        - Description 1.
-        - Description 2.
+        - Problem-Solving
+        - Collaboration
+        - Adaptability
+        - Critical Thinking
+        - Time Management
 
-- title: Other Interests
+- title: Languages
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - Spanish - Native
+    - English - Advanced (C1 Cambridge Level)
+
+- title: Hobbies
+  type: list
+  contents:
+    - Playing the guitar
+    - Skiing
+    - Reading about cosmology, physics, history, and fantasy literature
